crates/fixtures/tests/snapshots/hostile__content_scripts_common_inherited.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "(Latin é, [",
            "glyphs": [
              {
                "id": 504,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 13,
                "x": 3818,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 28,
                "x": 10531,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 47,
                "x": 16264,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 36,
                "x": 19925,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 41,
                "x": 23282,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 30108,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 263,
                "x": 32733,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 10
                }
              },
              {
                "id": 474,
                "x": 38151,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 1,
                "x": 41530,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 506,
                "x": 44155,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Ελληνικά ά",
            "glyphs": [
              {
                "id": 834,
                "x": 47759,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 2
                }
              },
              {
                "id": 873,
                "x": 54551,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 4
                }
              },
              {
                "id": 873,
                "x": 60611,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 6
                }
              },
              {
                "id": 869,
                "x": 66615,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 8
                }
              },
              {
                "id": 875,
                "x": 72810,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 10
                }
              },
              {
                "id": 871,
                "x": 78341,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 12
                }
              },
              {
                "id": 872,
                "x": 81574,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 14
                }
              },
              {
                "id": 888,
                "x": 87319,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 16
                }
              },
              {
                "id": 1,
                "x": 93604,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 888,
                "x": 96229,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 21
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "] after), ",
            "glyphs": [
              {
                "id": 507,
                "x": 102514,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 1,
                "x": 106118,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 28,
                "x": 108743,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 416,
                "x": 114476,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 121730,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 45,
                "x": 127475,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 505,
                "x": 132003,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 474,
                "x": 135371,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 1,
                "x": 138750,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Кириллица и́; ",
            "glyphs": [
              {
                "id": 923,
                "x": 141375,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 2
                }
              },
              {
                "id": 996,
                "x": 148730,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 4
                }
              },
              {
                "id": 1004,
                "x": 155995,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 6
                }
              },
              {
                "id": 996,
                "x": 162562,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 8
                }
              },
              {
                "id": 999,
                "x": 169715,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 10
                }
              },
              {
                "id": 999,
                "x": 176090,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 12
                }
              },
              {
                "id": 996,
                "x": 182578,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 14
                }
              },
              {
                "id": 1010,
                "x": 189843,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 16
                }
              },
              {
                "id": 988,
                "x": 196838,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 18
                }
              },
              {
                "id": 1,
                "x": 202571,
                "y": 10707,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 996,
                "x": 205196,
                "y": 10707,
                "text": {
                  "start": 19,
                  "end": 23
                }
              },
              {
                "id": 775,
                "x": 208823,
                "y": 10707,
                "text": {
                  "start": 19,
                  "end": 23
                }
              },
              {
                "id": 476,
                "x": 212461,
                "y": 10707,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 1,
                "x": 215840,
                "y": 10707,
                "text": {
                  "start": 24,
                  "end": 25
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Latin again.",
            "glyphs": [
              {
                "id": 13,
                "x": 0,
                "y": 24224,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 28,
                "x": 6713,
                "y": 24224,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 47,
                "x": 12446,
                "y": 24224,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 36,
                "x": 16107,
                "y": 24224,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 41,
                "x": 19464,
                "y": 24224,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 1,
                "x": 26290,
                "y": 24224,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 28,
                "x": 28915,
                "y": 24224,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 34,
                "x": 34536,
                "y": 24224,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 28,
                "x": 40145,
                "y": 24224,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 36,
                "x": 45878,
                "y": 24224,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 41,
                "x": 49235,
                "y": 24224,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 473,
                "x": 56061,
                "y": 24224,
                "text": {
                  "start": 11,
                  "end": 12
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
