crates/fixtures/tests/snapshots/hostile__content_snapshot_compacted.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "The owner.",
            "glyphs": [
              {
                "id": 21,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 35,
                "x": 6803,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 32,
                "x": 13573,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 1,
                "x": 19318,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 42,
                "x": 21943,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 50,
                "x": 28127,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 41,
                "x": 36733,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 32,
                "x": 43559,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 45,
                "x": 49304,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 473,
                "x": 53044,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Edited again. Edited. Before compaction.",
            "glyphs": [
              {
                "id": 6,
                "x": 0,
                "y": 32416,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 31,
                "x": 6792,
                "y": 32416,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 36,
                "x": 13179,
                "y": 32416,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 47,
                "x": 16536,
                "y": 32416,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 32,
                "x": 20197,
                "y": 32416,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 31,
                "x": 25942,
                "y": 32416,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 32329,
                "y": 32416,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 28,
                "x": 34954,
                "y": 32416,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 34,
                "x": 40575,
                "y": 32416,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 28,
                "x": 46184,
                "y": 32416,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 36,
                "x": 51917,
                "y": 32416,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 41,
                "x": 55274,
                "y": 32416,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 473,
                "x": 62100,
                "y": 32416,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 1,
                "x": 65479,
                "y": 32416,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 6,
                "x": 68104,
                "y": 32416,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 31,
                "x": 74896,
                "y": 32416,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 36,
                "x": 81283,
                "y": 32416,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 47,
                "x": 84640,
                "y": 32416,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 32,
                "x": 88301,
                "y": 32416,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 31,
                "x": 94046,
                "y": 32416,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 473,
                "x": 100433,
                "y": 32416,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 1,
                "x": 103812,
                "y": 32416,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 3,
                "x": 106437,
                "y": 32416,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 32,
                "x": 113522,
                "y": 32416,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 33,
                "x": 119154,
                "y": 32416,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 42,
                "x": 122972,
                "y": 32416,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 45,
                "x": 129156,
                "y": 32416,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 32,
                "x": 133808,
                "y": 32416,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 1,
                "x": 139553,
                "y": 32416,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 30,
                "x": 142178,
                "y": 32416,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 42,
                "x": 147675,
                "y": 32416,
                "text": {
                  "start": 30,
                  "end": 31
                }
              },
              {
                "id": 40,
                "x": 153859,
                "y": 32416,
                "text": {
                  "start": 31,
                  "end": 32
                }
              },
              {
                "id": 43,
                "x": 163839,
                "y": 32416,
                "text": {
                  "start": 32,
                  "end": 33
                }
              },
              {
                "id": 28,
                "x": 170406,
                "y": 32416,
                "text": {
                  "start": 33,
                  "end": 34
                }
              },
              {
                "id": 30,
                "x": 176139,
                "y": 32416,
                "text": {
                  "start": 34,
                  "end": 35
                }
              },
              {
                "id": 47,
                "x": 181636,
                "y": 32416,
                "text": {
                  "start": 35,
                  "end": 36
                }
              },
              {
                "id": 36,
                "x": 185297,
                "y": 32416,
                "text": {
                  "start": 36,
                  "end": 37
                }
              },
              {
                "id": 42,
                "x": 188654,
                "y": 32416,
                "text": {
                  "start": 37,
                  "end": 38
                }
              },
              {
                "id": 41,
                "x": 194838,
                "y": 32416,
                "text": {
                  "start": 38,
                  "end": 39
                }
              },
              {
                "id": 473,
                "x": 201664,
                "y": 32416,
                "text": {
                  "start": 39,
                  "end": 40
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
