crates/fixtures/tests/snapshots/hostile__content_snapshot_targets.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "The owner.",
            "glyphs": [
              {
                "id": 21,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 35,
                "x": 6803,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 32,
                "x": 13573,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 1,
                "x": 19318,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 42,
                "x": 21943,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 50,
                "x": 28127,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 41,
                "x": 36733,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 32,
                "x": 43559,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 45,
                "x": 49304,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 473,
                "x": 53044,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "The revised wording.",
            "glyphs": [
              {
                "id": 21,
                "x": 0,
                "y": 32416,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 35,
                "x": 6803,
                "y": 32416,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 32,
                "x": 13573,
                "y": 32416,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 1,
                "x": 19318,
                "y": 32416,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 45,
                "x": 21943,
                "y": 32416,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 26595,
                "y": 32416,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 49,
                "x": 32227,
                "y": 32416,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 36,
                "x": 37915,
                "y": 32416,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 46,
                "x": 41272,
                "y": 32416,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 32,
                "x": 46161,
                "y": 32416,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 31,
                "x": 51906,
                "y": 32416,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 1,
                "x": 58293,
                "y": 32416,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 50,
                "x": 60918,
                "y": 32416,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 42,
                "x": 69298,
                "y": 32416,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 45,
                "x": 75482,
                "y": 32416,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 31,
                "x": 80134,
                "y": 32416,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 36,
                "x": 86521,
                "y": 32416,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 41,
                "x": 89878,
                "y": 32416,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 34,
                "x": 96704,
                "y": 32416,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 473,
                "x": 102539,
                "y": 32416,
                "text": {
                  "start": 19,
                  "end": 20
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Written afterwards.",
            "glyphs": [
              {
                "id": 24,
                "x": 0,
                "y": 54125,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 45,
                "x": 10273,
                "y": 54125,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 36,
                "x": 15038,
                "y": 54125,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 47,
                "x": 18395,
                "y": 54125,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 47,
                "x": 22157,
                "y": 54125,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 25818,
                "y": 54125,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 41,
                "x": 31563,
                "y": 54125,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 1,
                "x": 38389,
                "y": 54125,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 28,
                "x": 41014,
                "y": 54125,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 416,
                "x": 46747,
                "y": 54125,
                "text": {
                  "start": 9,
                  "end": 11
                }
              },
              {
                "id": 32,
                "x": 54001,
                "y": 54125,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 45,
                "x": 59746,
                "y": 54125,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 50,
                "x": 64623,
                "y": 54125,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 28,
                "x": 73048,
                "y": 54125,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 45,
                "x": 78725,
                "y": 54125,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 31,
                "x": 83377,
                "y": 54125,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 46,
                "x": 89764,
                "y": 54125,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 473,
                "x": 94427,
                "y": 54125,
                "text": {
                  "start": 18,
                  "end": 19
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
